# elden-builder-app

./: Cargo.toml  README.md  asset-manifest.json  index.html  notes.txt
csv/: CalcCorrectGraphID.csv
csv_data/: RawData.csv  ReinforceParamWeapon.csv  StartingClasses.csv
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.js  App.tsx  StatList.js  index.js
frontend/src/components/: Incrementer.js  Incrementer.tsx  Item.js  OptimizedList.js  OptimizedList.tsx  StatList.js  StatList.tsx  VirtualAutocomplete.js  VirtualAutocomplete.tsx  Weapon.js  Weapon.tsx  common.js  weaponlist.js
frontend/src/pages/: Home.css  Home.js  Home.tsx  SignUpPage.tsx
frontend/src/services/: profile.js  profile.ts  stats.js  stats.ts  weapon.js  weapon.ts
src/: ar_calculator.rs  lib.rs  main.rs  optimizer.rs  optimizers.rs  stats.rs  weapon.rs  weapons.rs
src/ar_calculator/: ar_data.sqlite  csv_parsing.rs  db_utils.rs  mod.rs
static/css/: main.f47244f1.css  main.f47244f1.css.map
static/js/: main.3e18fbd6.js  main.3e18fbd6.js.map  main.7626180c.js  main.7626180c.js.map  main.b63ce4bd.js  main.b63ce4bd.js.map
